[tool.poetry]
name = "pandascompare"
version = "0.5.0"
description = "Generates comparison reports for pandas DataFrames."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/pandascompare"
homepage = "https://github.com/zteinck/pandascompare"

[tool.poetry.dependencies]
python = "^3.8"
pathpilot = "*"
oddments = "*"
numpy = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"