[tool.poetry]
name = "pandascompare"
version = "0.6.0"
description = "Generates comparison reports for pandas DataFrames."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/pandascompare"
homepage = "https://github.com/zteinck/pandascompare"

[tool.poetry.dependencies]
python = "^3.8"
pathpilot = ">=0.3.1"
oddments = ">=0.3.1"
numpy = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"